[package]
name = "licensed"
version = "0.1.0"
authors = ["Chris MacNaughton <chris@centaurisolutions.nl>"]

[dependencies]
chrono = {version = "0.4.2", features = ['serde']}
failure = "0.1.1"
log = "0.4.2"
ring = "0.12.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
untrusted = "0.5.1"

[[bin]]
name = "gen_license"
path = "bin/gen_license.rs"

[[bin]]
name = "gen_keys"
path = "bin/gen_keys.rs"