[package]
name = "licensed"
version = "0.1.1"
authors = ["Chris MacNaughton <chris@centaurisolutions.nl>"]
description = "licensed is a library to add signed licenses to your binary"
documentation = "https://docs.rs/licensed"
homepage = "https://github.com/ChrisMacNaughton/licensed"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
chrono = {version = "0.4.2", features = ['serde']}
failure = "0.1.1"
log = "0.4.2"
ring = "0.12.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
untrusted = "0.5.1"

[[bin]]
name = "gen_license"
path = "bin/gen_license.rs"

[[bin]]
name = "gen_keys"
path = "bin/gen_keys.rs"